<resources>
    <string name="app_name">Caly</string>
    <string name="title_activity_main_user_screen">Main_user_screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button">General</string>
    <string name="button2">Business</string>
    <string name="button3">Users</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="user_profile">User Profile</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="empty_email">Enter email address!</string>
    <string name="empty_password">Enter password!</string>
    <string name="illegal_password">Password too short, enter minimum 6 characters!</string>
    <string name="successfully_register">createUserWithEmail:onComplete:</string>
    <string name="failed_register">Authentication failed.</string>
    <string name="user_register_empty_fields">Please fill up all the fields!</string>
    <string name="food">Food</string>
    <string name="babysitter">Babysitter</string>
    <string name="barber_Shop">Barber Shop</string>
    <string name="nails_Salon">Nails Salon</string>
    <string name="private_teacher">Private teacher</string>
    <string name="other">Other</string>
    <string-array name="category">
        <item>@string/food</item>
        <item>@string/babysitter</item>
        <item>@string/barber_Shop</item>
        <item>@string/nails_Salon</item>
        <item>@string/private_teacher</item>
        <item>@string/other</item>
    </string-array>

    <string name="btn_edit_profile">Edit Profile</string>
    <string name="btn_cancel_edit_profile">Cancel Editing</string>
    <string name="toast_empty_user_details">Please type user name and phone number</string>
    <string name="dialog_category_title">Choose an Category</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="toast_empty_fields_business">Please fill up all the fields!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_business_screen">Main_business_screen</string>
    <string name="my_reservations">My Reservations</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>


    <!-- Dialog/Fragment names -->
    <string name="dialog_new_business">New Business Dialog</string>

    <!-- Strings -->
    <string name="note_title">Name</string>
    <string name="note_content">Category</string>
    <string name="note_time_of_res">Duration of each reservation(in minutes)</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="business_name">Business Name</string>
    <string name="category_hint">Category</string>
    <string name="pick_category_text">Pick Category</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="phone_number_bus_reg">Phone number</string>
    <string name="opening_at_bus_reg">Opening at</string>
    <string name="pick_time">Pick time</string>
    <string name="closing_at_bus_reg">Closing at</string>
    <string name="create_bus_btn">CREATE</string>
    <string name="cancel_bus_reg_btn">CANCEL</string>
    <string name="business_reg_address">Business address</string>
    <string name="update_business_btn">UPDATE</string>
    <string name="register_as_business">Register As Business</string>
    <string name="time_of_reservation_in_minutes">Time of reservation in minutes:</string>
    <string name="time_of_reservation">Time of reservation:</string>
    <string name="full_name_user_res">Full Name</string>
    <string name="pick_a_date_user_res">Pick a date</string>
    <string name="date">Date</string>
    <string name="pick_the_time_user_res">Pick the Time</string>
    <string name="hour">Hour</string>
    <string name="reserve_user_res">Reserve</string>
    <string name="address">Address</string>
    <string name="status">Status</string>
    <string name="restaurant">Restaurant</string>
    <string name="update">Update</string>
    <string name="marshmallow">Marshmallow</string>
    <string name="_23">23</string>
    <string name="day">day</string>
    <string name="business_name_user_res1">Business Name:</string>
    <string name="category_user_res1">Category:</string>


</resources>
