<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">



    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/business_name_user_res1"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:id="@+id/business_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/business_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_user_res1"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:id="@+id/business_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_hint" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/time_of_reservation_in_minutes" />
    <TextView
        android:id="@+id/business_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_of_reservation" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:id="@+id/note_user_name"
            android:imeOptions="actionNext"
            android:hint="@string/full_name_user_res"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_a_date_user_res"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_date"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/note_user_date"
            android:imeOptions="actionNext"
            android:hint="@string/date"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:text="@string/pick_the_time_user_res" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hour"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:id="@+id/note_hour"
            android:imeOptions="actionNext"
            android:hint="@string/hour"/>

    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:text="@string/reserve_user_res"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:id="@+id/create_button"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:text="@string/dialog_cancel"
            android:layout_marginRight="35dp"
            android:layout_toLeftOf="@+id/create"
            android:id="@+id/cancel_button"/>

    </RelativeLayout>

</LinearLayout>