<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegister">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/set_user_profile_image_reg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:paddingTop="10dp"
        android:src="@drawable/man1"
        android:layout_centerHorizontal="true"
        app:civ_border_width="0dp"
        app:civ_border_color="#FF000000"/>
    <EditText
        android:id="@+id/set_user_profile_name_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:hint="@string/full_name_user_res"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_account_box_black_24dp"
        android:layout_below="@+id/set_user_profile_image_reg"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/set_user_profile_phone_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:hint="@string/phone_number_bus_reg"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_local_phone_black_24dp"
        android:layout_below="@+id/set_user_profile_name_reg"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/set_user_profile_address_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:hint="@string/address"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_place_black_24dp"
        android:layout_below="@+id/set_user_profile_phone_reg"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/set_user_profile_status_reg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:hint="@string/status"
        android:textStyle="bold"
        android:layout_below="@+id/set_user_profile_address_reg"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/set_user_profile_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/action_sign_in_short"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_check_black_24dp"
        android:layout_below="@+id/set_user_profile_status_reg"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        />


</RelativeLayout>