<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileSettings"
    android:background="@color/colorPrimaryLightBackground">



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/set_user_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:src="@drawable/man1"
        app:civ_border_color="#ffffff"
        app:civ_border_width="0dp" />

    <EditText
        android:id="@+id/set_user_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_user_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/ic_account_box_black_24dp"
        android:hint="@string/full_name_user_res"
        android:textAlignment="center"
        android:textStyle="bold"

        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:id="@+id/set_user_profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_user_profile_name"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/ic_local_phone_black_24dp"
        android:hint="@string/phone_number_bus_reg"
        android:textAlignment="center"
        android:textStyle="bold"

        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:id="@+id/set_user_profile_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_user_profile_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/ic_place_black_24dp"
        android:hint="@string/address"
        android:textAlignment="center"
        android:textStyle="bold"

        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:id="@+id/set_user_profile_status"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/set_user_profile_address"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/status"
        android:textAlignment="center"
        android:textStyle="bold"

        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <Button
        android:id="@+id/set_user_profile_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_user_profile_status"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/ic_check_black_24dp"
        android:text="@string/update"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/White"
        android:background="@color/colorPrimary"/>

    <Button


        android:id="@+id/edit_profile_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_edit_profile"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="10dp"
        android:textColor="@color/White"
        android:background="@color/colorPrimary"
        />




</RelativeLayout>